#18 implement tree card
